--- a/styles.css
+++ b/styles.css
@@ -25,7 +25,7 @@ body {
     width: 100%;
     margin: auto;
     padding: 1rem 1rem;
-    max-width: 500px;
+    max-width: 800px;
     text-align: center;
     background-color: var(--ash-grey);
 }
@@ -39,11 +39,12 @@ body {
     font-size: 1.2rem;
     outline: #fff;
     padding: 0.6rem 1rem;
-    margin: 1rem;
+    margin: 1rem auto;
     border: 2px solid var(--primary-color);
     border-radius: 0.5rem;
     width: 100%;
     max-width: 280px;
+    display: block;
 }
 
 .button {
